--- a/style.css
+++ b/style.css
@@ -74,3 +74,22 @@ p {
     margin-top: 100px;
 
 }
+
+.experience-area {
+
+    display: flex;
+
+    gap: 50px;
+
+}
+
+.Experiences-header {
+
+    padding-left: 10px;
+    padding-top: 80px;
+}
+
+.container {
+    padding-left: 20px;
+    padding-right: 20px;
+}
