--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ p {
 .hero-section {
     display: flex;
     gap: 50px;
+    align-items: center;
 }
 
 .half-width {
@@ -60,19 +61,25 @@ p {
     border-radius: 5px;
     color: rgb(255, 255, 255);
     font-weight: 700;
+    margin-top: 50px;
 }
 
 .hero-section {
 
-    background-image: url(image/back.png);
+    /* background-image: url(image/back.png); */
 
+}
+
+
+.test-2 {
+    margin-top: 50px
 }
 
 .dream-big {
     display: flex;
     gap: 50px;
     margin-top: 100px;
-
+    align-items: center;
 }
 
 .experience-area {
@@ -108,6 +115,7 @@ p {
 
 }
 
+
 #box-2 {
 
 
@@ -117,4 +125,9 @@ p {
 footer p {
 
     text-align: center;
+}
+
+.second-button {
+    padding-top: 50px;
+
 }
